--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="min-h-screen bg-gray-100">
+    <div class="min-h-screen">
       <header class="relative w-full overflow-hidden">
         <div class="relative w-full">
           <img src="images/header-bg.png" alt="Restaurant header" class="w-full h-full object-cover"/>
@@ -18,10 +18,10 @@
           <div class="max-w-7xl mx-auto flex flex-col md:flex-row items-center justify-between gap-4">
             <img src="images/logo.png" alt="Logo" class="h-12 w-auto"/>
             <div class="font-menu flex flex-col md:flex-row items-center gap-4 md:gap-8">
-              <a href="#" class="text-white hover:text-gray-200 transition">Преимущества</a>
-              <a href="#" class="text-white hover:text-gray-200 transition">Коллекции</a>
-              <a href="#" class="text-white hover:text-gray-200 transition">Фотогалерея</a>
-              <a href="#" class="text-white hover:text-gray-200 transition">Контакты</a>
+              <a href="#" class="text-white -200 transition">Преимущества</a>
+              <a href="#" class="text-white -200 transition">Коллекции</a>
+              <a href="#" class="text-white -200 transition">Фотогалерея</a>
+              <a href="#" class="text-white -200 transition">Контакты</a>
             </div>
             <div class="text-white text-center md:text-right">
               <div class="font-number text-xl md:text-2xl font-medium">8 (800) 333-75-07</div>
@@ -57,73 +57,73 @@
           </div>
         </div>
       </section>
-      <section class="max-w-[1280px] mx-auto  py-12 md:py-16 lg:py-20">
+      <section class="max-w-[1280px] mx-auto  py-12 md:py-16 lg:py-[80px]">
         <div class="grid grid-cols-2 md:grid-cols-3 max-w-[1280px] lg:grid-cols-4 gap-4 md:gap-6 lg:gap-[20px]">
             <div class="flex flex-col gap-2">
               <div class="asp-square">
-                <img src="images/tarelka1.png" class="w-[305px] h-[240px]"/>
+                <img src="images/tarelka1.png" class="w-[305px] h-[240px] modal-trigger"/>
               </div>
-              <p class="font-tarelka text-sm text-gray-700">Тарелка для пасты d=280 мм. 1600 мл</p>
+              <p class="font-tarelka text-sm  -700">Тарелка для пасты d=280 мм. 1600 мл</p>
             </div>
             <div class="flex flex-col gap-2">
                 <div class="asp-square">
-                  <img src="images/tarelka2.png" class="w-[305px] h-[240px]"/>
+                  <img src="images/tarelka2.png" class="w-[305px] h-[240px] modal-trigger"/>
                 </div>
-                <p class="font-tarelka text-sm text-gray-700">Тарелка для пасты d=250 мм.<br> 1300 мл</p>
+                <p class="font-tarelka text-sm  -700">Тарелка для пасты d=250 мм.<br> 1300 мл</p>
               </div>
               <div class="flex flex-col gap-2">
                 <div class="asp-square">
-                  <img src="images/tarelka3.png" class="w-[305px] h-[240px]"/>
+                  <img src="images/tarelka3.png" class="w-[305px] h-[240px] modal-trigger"/>
                 </div>
-                <p class="font-tarelka text-sm text-gray-700">Тарелка d=280 мм</p>
+                <p class="font-tarelka text-sm  -700">Тарелка d=280 мм</p>
               </div>
               <div class="flex flex-col gap-2">
                 <div class="asp-square">
-                  <img src="images/tarelka4.png" class="w-[305px] h-[240px]"/>
+                  <img src="images/tarelka4.png" class="w-[305px] h-[240px] modal-trigger"/>
                 </div>
-                <p class="font-tarelka text-sm text-gray-700">Тарелка d=220 мм</p>
+                <p class="font-tarelka text-sm  -700">Тарелка d=220 мм</p>
               </div>
               <div class="flex flex-col gap-2">
                 <div class="asp-square">
-                  <img src="images/tarelka5.png" class="w-[305px] h-[240px]"/>
+                  <img src="images/tarelka5.png" class="w-[305px] h-[240px] modal-trigger"/>
                 </div>
-                <p class="font-tarelka text-sm text-gray-700">Тарелка d=160 мм</p>
+                <p class="font-tarelka text-sm  -700">Тарелка d=160 мм</p>
               </div>
               <div class="flex flex-col gap-2">
                 <div class="asp-square">
-                  <img src="images/tarelka6.png" class="w-[305px] h-[240px]"/>
+                  <img src="images/tarelka6.png" class="w-[305px] h-[240px] modal-trigger"/>
                 </div>
-                <p class="font-tarelka text-sm text-gray-700">Соусник 100 мл. d=100 мм</p>
+                <p class="font-tarelka text-sm  -700">Соусник 100 мл. d=100 мм</p>
               </div>
               <div class="flex flex-col gap-2">
                 <div class="asp-square">
-                  <img src="images/tarelka7.png" class="w-[305px] h-[240px]"/>
+                  <img src="images/tarelka7.png" class="w-[305px] h-[240px] modal-trigger"/>
                 </div>
-                <p class="font-tarelka text-sm text-gray-700">Салатник d=140 мм. 350 мл.<br> h=50 мм</p>
+                <p class="font-tarelka text-sm  -700">Салатник d=140 мм. 350 мл.<br> h=50 мм</p>
               </div>
               <div class="flex flex-col gap-2">
                 <div class="asp-square">
-                  <img src="images/tarelka8.png" class="w-[305px] h-[240px]"/>
+                  <img src="images/tarelka8.png" class="w-[305px] h-[240px] modal-trigger"/>
                 </div>
-                <p class="font-tarelka text-sm text-gray-700">Блюдо овальное 340*230 мм</p>
+                <p class="font-tarelka text-sm  -700">Блюдо овальное 340*230 мм</p>
               </div>
               <div class="flex flex-col gap-2">
                 <div class="asp-square">
-                  <img src="images/tarelka9.png" class="w-[305px] h-[240px]"/>
+                  <img src="images/tarelka9.png" class="w-[305px] h-[240px] modal-trigger"/>
                 </div>
-                <p class="font-tarelka text-sm text-gray-700">Блюдо овальное 300*155 мм</p>
+                <p class="font-tarelka text-sm  -700">Блюдо овальное 300*155 мм</p>
               </div>
               <div class="flex flex-col gap-2">
                 <div class="asp-square">
-                  <img src="images/tarelka10.png" class="w-[305px] h-[240px]"/>
+                  <img src="images/tarelka10.png" class="w-[305px] h-[240px] modal-trigger"/>
                 </div>
-                <p class="font-tarelka text-sm text-gray-700">Блюдо овальное 210*100 мм</p>
+                <p class="font-tarelka text-sm  -700">Блюдо овальное 210*100 мм</p>
               </div>
               <div class="flex flex-col gap-2">
                 <div class="asp-square">
-                  <img src="images/tarelka11.png" class="w-[305px] h-[240px]"/>
+                  <img src="images/tarelka11.png" class="w-[305px] h-[240px] modal-trigger"/>
                 </div>
-                <p class="font-tarelka text-sm text-gray-700">Блюдо овальное 100*65 мм</p>
+                <p class="font-tarelka text-sm  -700">Блюдо овальное 100*65 мм</p>
               </div>
         </div>
       </section>
@@ -138,26 +138,31 @@
                 <form class="grid grid-cols-1 md:grid-cols-2 gap-[20px]">
                   <div class="flex flex-col gap-2">
                     <label class="contact-txt text-[272727]">Имя</label>
-                    <input type="text" placeholder="Например, Алексей" class="w-[304px] h-[62px] contact-input p-3 rounded-lg border border-gray-300 focus:ring-2 focus:ring-gray-400"/>
+                    <input type="text" placeholder="Например, Алексей" class="w-[304px] h-[62px] pl-[20px] contact-input p-3 rounded-lg border border-gray-300 focus:ring-2 focus:border-[#272727]"/>
                   </div>
                   <div class="flex flex-col gap-2">
                     <label class="contact-txt text-sm text-[272727]">Номер телефона</label>
-                    <input type="tel" placeholder="+7 (900) 000-00-00" class="w-[304px] h-[62px] contact-input p-3 rounded-lg border border-gray-300 focus:ring-2 focus:ring-gray-400"/>
+                    <input type="tel" placeholder="+7 (900) 000-00-00" class="w-[304px] h-[62px] pl-[20px] contact-input p-3 rounded-lg border border-gray-300 focus:ring-2 focus:border-[#272727]"/>
                   </div>
                   <div class="flex flex-col gap-2">
                     <label class="contact-txt text-sm text-[272727]">E-mail</label>
-                    <input type="email" placeholder="Адрес электронной почты" class="w-[304px] h-[62px] contact-input p-3 rounded-lg border border-gray-300 focus:ring-2 focus:ring-gray-400"/>
+                    <input type="email" placeholder="Адрес электронной почты" class="w-[304px] h-[62px] pl-[20px] contact-input p-3 rounded-lg border border-gray-300 focus:ring-2 focus:border-[#272727]"/>
                   </div>
-                  <div class="flex flex-col gap-2">
+                  <div class="flex flex-col gap-2 relative">
                     <label class="contact-txt text-sm text-[272727]">Вид заведения</label>
-                    <select class="w-[304px] h-[62px] contact-input p-3 rounded-lg border border-gray-300 focus:ring-2 focus:ring-gray-400">
-                      <option value="">Выберите вид заведения</option>
-                      <option value="restaurant">Ресторан</option>
-                      <option value="cafe">Кафе</option>
-                      <option value="bar">Бар</option>
-                      <option value="hotel">Отель</option>
-                    </select>
-                  </div>
+                    <div class="custom-dropdown w-[304px] h-[62px] relative">
+                        <button class="dropdown-toggle w-full h-full pl-[20px] contact-input p-3 rounded-lg border border-gray-300 focus:ring-2 focus:border-[#272727] text-black font-medium text-left" type="button">
+                            <span class="selected-option">Выберите вид заведения</span>
+                            <img src="images/arrow.png" alt="arrow" class="arrow absolute right-3 top-1/2 -translate-y-1/2">
+                        </button>
+                        <ul class="dropdown-menu hidden absolute w-full mt-1 bg-white border border-gray-300 rounded-lg shadow-lg max-h-[200px] overflow-auto z-10">
+                            <li class="dropdown-item px-4 py-2 hover:bg-gray-100 cursor-pointer" data-value="hotel">Отель</li>
+                            <li class="dropdown-item px-4 py-2 hover:bg-gray-100 cursor-pointer" data-value="restaurant">Ресторан</li>
+                            <li class="dropdown-item px-4 py-2 hover:bg-gray-100 cursor-pointer" data-value="cafe">Кафе</li>
+                            <li class="dropdown-item px-4 py-2 hover:bg-gray-100 cursor-pointer" data-value="bar">Бар</li>
+                        </ul>
+                    </div>
+                </div>
                   <div class="pt-13 w-full md:w-[305px] h-auto">
                     <button 
                       type="submit"
@@ -175,5 +180,34 @@
           </div>
       </section>
     </div>
+    <!-- Modal structure -->
+    <div id="imageModal" class="modal">
+        <span class="close">&times;</span>
+        <img class="modal-content" id="modalImage">
+    </div>
+    <script>
+        // Modal functionality
+        const modal = document.getElementById("imageModal");
+        const modalImg = document.getElementById("modalImage");
+        const closeBtn = document.getElementsByClassName("close")[0];
+
+        document.querySelectorAll('.modal-trigger').forEach(item => {
+            item.addEventListener('click', event => {
+                modal.style.display = "block";
+                modalImg.src = event.target.src;
+            });
+        });
+
+        closeBtn.onclick = function() {
+            modal.style.display = "none";
+        }
+
+        window.onclick = function(event) {
+            if (event.target == modal) {
+                modal.style.display = "none";
+            }
+        }
+    </script>
+    <script src="dropdown.js"></script>
   </body>
 </html>
